added partials and hero section

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "crafton2",
   "version": "1.0.0",
   "description": "Statyczny projekt PHP + SCSS + BrowserSync",
-  "scripts": {
-    "sass": "sass --watch scss/main.scss:dist/main.css --style=expanded",
-    "sass:build": "sass scss/main.scss:dist/main.min.css --no-source-map --style=compressed",
-    "serve": "browser-sync start --proxy \"http://localhost:8888/crafton2\" --files \"dist/*.css, js/*.js, **/*.php\"",
-    "dev": "npm-run-all --parallel sass serve"
-  },
+"scripts": {
+  "sass": "sass --watch scss:dist --style=expanded",
+  "sass:build": "sass scss:dist --no-source-map --style=compressed",
+  "serve": "browser-sync start --proxy \"http://localhost:8888/crafton2\" --files \"dist/*.css\", \"scss/**/*.scss\", \"**/*.php\", \"js/**/*.js\"",
+  "dev": "npm-run-all --parallel sass serve"
+},
   "devDependencies": {
     "browser-sync": "^2.29.3",
     "npm-run-all": "^4.1.5",
